# FileTimeFixer

./: .gitignore  CMakeLists.txt  FileTimeFixer.cpp  README.md
.github/workflows/: cmake-single-platform.yml  python-tests.yml
cpp/: CMakeLists.txt  ExifHelper.cpp  ExifHelper.h  FileTimeHelper.cpp  FileTimeHelper.h  ImageUtil.cpp  ImageUtil.h  Main.cpp  README.md  TargetTimeResolver.cpp  TargetTimeResolver.h  Tests.cpp  TimeConvert.cpp  TimeConvert.h  TimeParse.cpp  TimeParse.h  VideoMetaHelper.cpp  VideoMetaHelper.h  build_and_test_debug.sh  env_cmake.sh  init_env.cmd  init_env.ps1  init_env.sh
docs/: ImageSimilarityDesign.md  PlatformTimeSources.md
old_cpp/: FileTimeFixer.cpp  README.md
python/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/tests/: __init__.py  test_exif_helper.py  test_image_util.py  test_integration.py  test_spec_parity.py  test_target_time_resolver.py  test_time_convert.py  test_time_parse.py
similar_images/: README.md  pyproject.toml  requirements.txt
similar_images/similar_images/: __init__.py  cli.py  exif_utils.py  similarity.py
test_spec/: README.md  target_resolver.yaml  time_parse.yaml
